[package]
name = "netviz"
version = "0.1.0"
authors = ["IchBinLeoon"]
edition = "2024"
description = "A simple network traffic monitor and visualizer"
readme = "README.md"
repository = "https://github.com/IchBinLeoon/netviz"
license = "MIT"
keywords = ["cli", "network", "traffic", "monitor", "visualizer"]
categories = ["command-line-utilities", "network-programming", "visualization"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
sysinfo = "0.35"

[profile.release]
opt-level = "z"
strip = true
lto = true
